# katana_move_group_plugins

./: .gitignore  LICENSE  README.md
katana_manipulation/: CMakeLists.txt  katana_pick_place_capability_plugin_description.xml  package.xml
katana_manipulation/katana_pick_place/: CMakeLists.txt
katana_manipulation/katana_pick_place/cfg/: KatanaPickPlaceDynamicReconfigure.cfg
katana_manipulation/katana_pick_place/include/moveit/katana_pick_place/: approach_and_translate_stage.h  manipulation_pipeline.h  manipulation_plan.h  manipulation_stage.h  pick_place.h  pick_place_params.h  plan_stage.h  reachable_valid_pose_filter.h
katana_manipulation/katana_pick_place/src/: approach_and_translate_stage.cpp  manipulation_pipeline.cpp  pick.cpp  pick_place.cpp  pick_place_params.cpp  place.cpp  plan_stage.cpp  reachable_valid_pose_filter.cpp
katana_manipulation/move_group_katana_pick_place_capability/: CMakeLists.txt
katana_manipulation/move_group_katana_pick_place_capability/include/moveit/move_group_katana_pick_place_capability/: capability_names.h
katana_manipulation/move_group_katana_pick_place_capability/src/: katana_pick_place_action_capability.cpp  katana_pick_place_action_capability.h
