<package>
  <name>katana_pick_place_plugin</name>
  <version>0.0.1</version>
  <description>Components of MoveIt used for manipulation using Katana arm</description>

  <author email="lziegler@techfak.uni-bielefeld.de">Leon Ziegler</author>
  <maintainer email="lziegler@techfak.uni-bielefeld.de">Leon Ziegler</maintainer>

  <license>none</license>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>actionlib</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_move_group</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>household_objects_database_msgs</build_depend>
  <build_depend>manipulation_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>household_objects_database_msgs</run_depend>
  <run_depend>manipulation_msgs</run_depend>

  <export>
    <moveit_ros_move_group plugin="${prefix}/katana_pick_place_capability_plugin_description.xml"/>
  </export>

</package>
